# ot-harjoitustyo-jannelem

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaaviot.md  tehtava1.md  tehtava2.md  tehtava3.md
src/: index.py  index.py.save
src/entities/: game.py  player.py
src/services/: game_service.py  player_service.py
src/tests/: game_service_test.py  game_test.py
src/tests/game_service_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ui/: game_old.py  menus.py  ui.py
